# cookiecutter-pyproject

./: .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml  requirements.txt
hooks/: context.py  pre_prompt.py
tests/: conftest.py  core.py  test_bake_project.py
tests/model/: Context.py  Cookies.py  Result.py  cookies.py  result.py
{{ cookiecutter.project_name }}/: .editorconfig  .gitignore  README.md  logging.ini  pyproject.toml
{{ cookiecutter.project_name }}/src/{{ cookiecutter.project_slug }}/: __main__.py
{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  README.md  __main__.py  pyproject.toml
{{ cookiecutter.project_slug }}/.devcontainer/: devcontainer.json
