[project]
name = "cookiecutter-pyproject"
readme = "README.md"
requires-python = ">=3.7"
description = "The python project template based on cookiecutter."
authors = [
  { name = "zlhywlf", email = "tommietanghao@zlhywlf.onmicrosoft.com" },
]
classifiers = [
  "Programming Language :: Python :: 3.7",
]

[project.optional-dependencies]
dev = [
  "cookiecutter~=2.6.0",
  "pytest~=7.4.0",
  "faker~=18.13.0",
  "pydantic~=2.5.0",
  "ruff~=0.6.0",
  "mypy~=1.4.0",
]

[tool.ruff]
line-length = 120
fix = true
preview = true
exclude = ["*cookiecutter.project_slug*"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
select = [
  "A", "ANN", "ARG", "ASYNC", "B", "BLE", "C4", "COM", "CPY", "D", "DTZ", "E", "EM", "ERA", "F", "FBT", "I", "ICN",
  "ISC", "N", "PIE", "PT", "PTH", "PYI", "Q", "RET", "RSE", "RUF", "S", "SIM", "SLOT", "T20", "TD", "UP", "W",
]
ignore = ["COM812", "D203", "D213", "ISC001", "RUF029"]

[tool.ruff.lint.extend-per-file-ignores]
"test_*.py" = ["S101"]
"__init__.py" = ["D104", "CPY001"]
"tests/model/*" = ["N999"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = ["tests", "hooks"]

[tool.mypy]
strict = true
python_version = "3.7"
files = ["tests", "hooks"]

[[tool.mypy.overrides]]
module = ["py", "yaml", "cookiecutter.generate", "cookiecutter.main", "cookiecutter.prompt"]
ignore_missing_imports = true
